# journal-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
design/: mvp-design.md  requirements.md
migrations/: 001_init_schema.sql  002_fts5_index.sql  003_fts5_triggers.sql  004_entry_title.sql
src/: App.svelte  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: entries.rs  mod.rs  tags.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/tests/: integration_tests.rs
src/lib/: api.ts
src/routes/: Editor.svelte  Search.svelte  Timeline.svelte
