[package]
name = "journal"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "journal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-opener = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
argon2 = "0.5"
age = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
rand = "0.8"
hex = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
